--- a/login/pom.xml
+++ b/login/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.3.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.fernandologin</groupId>
-	<artifactId>sistemalogin</artifactId>
+	<groupId>com.greca</groupId>
+	<artifactId>login</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>sistemalogin</name>
+	<name>login</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
