--- a/login/src/main/resources/application.properties
+++ b/login/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=login
+
+# Configuração do thymeleaf
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.cache=FALSE
+
+# Configuração Banco de Dados
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/sistemaLogin
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
